# hw6-solutions

./: README.md  pyproject.toml
.github/workflows/: lint.yml
src/: main.py
